Avoid flash of invisible text

--- a/src/fonts/index.scss
+++ b/src/fonts/index.scss
@@ -3,6 +3,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: local('Roboto Thin'), local('Roboto-Thin'),
        url('fonts/roboto/roboto-v16-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-v16-latin-100.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -13,6 +14,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local('Roboto Light'), local('Roboto-Light'),
        url('fonts/roboto/roboto-v16-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-v16-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -23,6 +25,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Roboto'), local('Roboto-Regular'),
        url('fonts/roboto/roboto-v16-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-v16-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -33,6 +36,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('Roboto Medium'), local('Roboto-Medium'),
        url('fonts/roboto/roboto-v16-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-v16-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -43,6 +47,7 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: local('Roboto Mono Thin'), local('RobotoMono-Thin'),
        url('fonts/roboto/roboto-mono-v4-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-mono-v4-latin-100.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -53,6 +58,7 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local('Roboto Mono Light'), local('RobotoMono-Light'),
        url('fonts/roboto/roboto-mono-v4-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-mono-v4-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -63,6 +69,7 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Roboto Mono'), local('RobotoMono-Regular'),
        url('fonts/roboto/roboto-mono-v4-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-mono-v4-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -73,6 +80,7 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('Roboto Mono Medium'), local('RobotoMono-Medium'),
        url('fonts/roboto/roboto-mono-v4-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/roboto/roboto-mono-v4-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -83,6 +91,7 @@
   font-family: 'Maven Pro';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Maven Pro Regular'), local('MavenPro-Regular'),
        url('fonts/maven-pro/maven-pro-v9-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/maven-pro/maven-pro-v9-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -93,6 +102,7 @@
   font-family: 'Maven Pro';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('Maven Pro Medium'), local('MavenPro-Medium'),
        url('fonts/maven-pro/maven-pro-v9-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/maven-pro/maven-pro-v9-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -103,6 +113,7 @@
   font-family: 'Maven Pro';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local('Maven Pro Bold'), local('MavenPro-Bold'),
        url('fonts/maven-pro/maven-pro-v9-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('fonts/maven-pro/maven-pro-v9-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -113,6 +124,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Mulish Regular'), local('Mulish-Regular'),
   url('fonts/mulish/Mulish-Regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-Regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -123,6 +135,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('Mulish Medium'), local('Mulish-Medium'),
   url('fonts/mulish/Mulish-Medium.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-Medium.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -133,6 +146,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: local('Mulish SemiBold'), local('Mulish-SemiBold'),
   url('fonts/mulish/Mulish-SemiBold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-SemiBold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -143,6 +157,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local('Mulish Bold'), local('Mulish-Bold'),
   url('fonts/mulish/Mulish-Bold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-Bold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -153,6 +168,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
   src: local('Mulish ExtraBold'), local('Mulish-ExtraBold'),
   url('fonts/mulish/Mulish-ExtraBold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-ExtraBold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -163,6 +179,7 @@
   font-family: 'Mulish';
   font-style: normal;
   font-weight: 900;
+  font-display: swap;
   src: local('Mulish Black'), local('Mulish-Black'),
   url('fonts/mulish/Mulish-Black.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('fonts/mulish/Mulish-Black.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
